; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/fs/extr_sd_fat_devoptab.c_sd_fat_statvfs_r.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/fs/extr_sd_fat_devoptab.c_sd_fat_statvfs_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._reent = type { i32 }
%struct.statvfs = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i64 }
%struct.TYPE_4__ = type { i32, i32, i32 }

@ENODEV = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct._reent*, i8*, %struct.statvfs*)* @sd_fat_statvfs_r to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sd_fat_statvfs_r(%struct._reent* %0, i8* %1, %struct.statvfs* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct._reent*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.statvfs*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct._reent* %0, %struct._reent** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.statvfs* %2, %struct.statvfs** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call %struct.TYPE_4__* @sd_fat_get_device_data(i8* %12)
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %8, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %15 = icmp ne %struct.TYPE_4__* %14, null
  br i1 %15, label %20, label %16

16:                                               ; preds = %3
  %17 = load i32, i32* @ENODEV, align 4
  %18 = load %struct._reent*, %struct._reent** %5, align 8
  %19 = getelementptr inbounds %struct._reent, %struct._reent* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  store i32 -1, i32* %4, align 4
  br label %92

20:                                               ; preds = %3
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @OSLockMutex(i32 %23)
  %25 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %26 = call i32 @memset(%struct.statvfs* %25, i32 0, i32 48)
  %27 = load i8*, i8** %6, align 8
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %29 = call i8* @sd_fat_real_path(i8* %27, %struct.TYPE_4__* %28)
  store i8* %29, i8** %9, align 8
  %30 = load i8*, i8** %9, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %40, label %32

32:                                               ; preds = %20
  %33 = load i32, i32* @ENOMEM, align 4
  %34 = load %struct._reent*, %struct._reent** %5, align 8
  %35 = getelementptr inbounds %struct._reent, %struct._reent* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @OSUnlockMutex(i32 %38)
  store i32 -1, i32* %4, align 4
  br label %92

40:                                               ; preds = %20
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = load i8*, i8** %9, align 8
  %48 = call i32 @FSGetFreeSpaceSize(i32 %43, i32 %46, i8* %47, i32* %10, i32 -1)
  store i32 %48, i32* %11, align 4
  %49 = load i8*, i8** %9, align 8
  %50 = call i32 @free(i8* %49)
  %51 = load i32, i32* %11, align 4
  %52 = icmp slt i32 %51, 0
  br i1 %52, label %53, label %61

53:                                               ; preds = %40
  %54 = load i32, i32* %11, align 4
  %55 = load %struct._reent*, %struct._reent** %5, align 8
  %56 = getelementptr inbounds %struct._reent, %struct._reent* %55, i32 0, i32 0
  store i32 %54, i32* %56, align 4
  %57 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 0
  %59 = load i32, i32* %58, align 4
  %60 = call i32 @OSUnlockMutex(i32 %59)
  store i32 -1, i32* %4, align 4
  br label %92

61:                                               ; preds = %40
  %62 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %63 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %62, i32 0, i32 0
  store i32 512, i32* %63, align 8
  %64 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %65 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %64, i32 0, i32 1
  store i32 512, i32* %65, align 4
  %66 = load i32, i32* %10, align 4
  %67 = ashr i32 %66, 9
  %68 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %69 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %68, i32 0, i32 2
  store i32 %67, i32* %69, align 8
  %70 = load i32, i32* %10, align 4
  %71 = ashr i32 %70, 9
  %72 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %73 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %72, i32 0, i32 4
  store i32 %71, i32* %73, align 8
  %74 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %75 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %74, i32 0, i32 3
  store i32 %71, i32* %75, align 4
  %76 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %77 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %76, i32 0, i32 5
  store i32 -1, i32* %77, align 4
  %78 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %79 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %78, i32 0, i32 6
  store i32 -1, i32* %79, align 8
  %80 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %81 = ptrtoint %struct.TYPE_4__* %80 to i32
  %82 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %83 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %82, i32 0, i32 7
  store i32 %81, i32* %83, align 4
  %84 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %85 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %84, i32 0, i32 9
  store i64 0, i64* %85, align 8
  %86 = load %struct.statvfs*, %struct.statvfs** %7, align 8
  %87 = getelementptr inbounds %struct.statvfs, %struct.statvfs* %86, i32 0, i32 8
  store i32 255, i32* %87, align 8
  %88 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %89 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %88, i32 0, i32 0
  %90 = load i32, i32* %89, align 4
  %91 = call i32 @OSUnlockMutex(i32 %90)
  store i32 0, i32* %4, align 4
  br label %92

92:                                               ; preds = %61, %53, %32, %16
  %93 = load i32, i32* %4, align 4
  ret i32 %93
}

declare dso_local %struct.TYPE_4__* @sd_fat_get_device_data(i8*) #1

declare dso_local i32 @OSLockMutex(i32) #1

declare dso_local i32 @memset(%struct.statvfs*, i32, i32) #1

declare dso_local i8* @sd_fat_real_path(i8*, %struct.TYPE_4__*) #1

declare dso_local i32 @OSUnlockMutex(i32) #1

declare dso_local i32 @FSGetFreeSpaceSize(i32, i32, i8*, i32*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
